--- a/src/components/imageGallery.module.css
+++ b/src/components/imageGallery.module.css
@@ -5,12 +5,18 @@
   justify-content: center;
   width: 100%;
   height: 300px;
-  margin-top: -1.5rem;
-  margin-bottom: 0;
+  margin-top: 0;
+  margin-bottom: 1.5rem;
 }
 
 .gallery + h2 {
-  margin-top: -1.5rem;
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+.gallery + h2 + p {
+  margin-top: 0;
+  margin-bottom: 1.5rem;
 }
 
 .image {
